Add .NET 7 & auth tests
* Add middleware for .NET 7 problem details
* update problem details
* add auth test
